# shmutils

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  shmutils.sublime-project  test-requirements.txt
.github/workflows/: codeql.yml  python-app.yml  release.yml  style.yml  test.yml
examples/: example.py
shmutils/: __init__.py  __main__.py  about.py  errors.py  exceptions.py  ffibuilder.py  lock.py  mmap.py  page.py  posix.py  process_main.py  region.py  rendezvous.py  shm.py  types.py  typing.py  utils.py
tests/: test_locks.py  test_mmap.py  test_relativeview.py  test_shared_page.py  test_shmflags.py
