[build-system]
requires = ["setuptools>=62.3.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | python
  | _build
  | buck-out
  | build
  | dist
)/
'''
