[metadata]
name = shmutils
author = Autumn Jolitz
version = attr: shmutils.__version__
description = Shared memory structures
url = https://github.com/autumnjolitz/shmutils
license = BSD 3-Clause License
license_files =
    LICENSE
platforms =
    posix
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    shm
    shared
    memory
    posix
    mmap
    munmap
    shm_open
    shm_unlink
    pickle
    cffi
    cdata
    shared
    heap
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Symmetric Multi-processing
    

[options]
packages = find:
install_requires =
    cffi >= 1.15.0
    intervaltree
setup_requires =
    cffi >= 1.15.0
zip_safe = False
include_package_data = True
cffi_modules=
    shmutils/ffibuilder.py:ffi

[options.extras_require]
test =
    pytest
    black
    flake8
    wheel
    twine

[flake8]
ignore = E402,E731,W503,W504,E252
exclude = .git,__pycache__,build,dist,.eggs,.github,.local,python
